rust-runtime-kafka/kafka/kr-kafka-ffi/include/kr_kafka.h

typedef struct kr_producer kr_producer;
typedef struct {const uint8_t *ptr;uint32_t len;} kr_span;
typedef struct {uint32_t struct_size;kr_span key,value;uint32_t value_is_null;} kr_header;
typedef struct {
 uint32_t struct_size,topic;int32_t partition_hint,lane_hint;
 kr_span key;uint32_t key_is_null;kr_span value;uint32_t value_is_null;
 const kr_header *headers;uint32_t header_count;int64_t timestamp_ms;uint64_t user_token,delivery_timeout_ns;
} kr_record;
/* Delivery base_offset is this record's absolute offset. Delivery timestamp_ms,
 * when present, is the broker's batch log_append_time_ms. On duplicate retries
 * it may be the batch maximum timestamp, not this record's encoded CreateTime. */
typedef struct {
 uint32_t struct_size,kind;uint64_t token,user_token;uint32_t topic;uint8_t topic_id[16];int32_t partition;
 uint32_t outcome,reason;int64_t base_offset;uint32_t base_offset_present;int64_t timestamp_ms;
 uint32_t timestamp_present,attempts,count;
} kr_event;
int32_t kr_buffer_release(kr_producer*,uint64_t);
/* Register immutable foreign storage without copying. ptr/length describe the
 * full pinned byte allocation (1..UINT32_MAX bytes), including capacity slack.
 * Caller prevents writes, movement and deallocation across all threads until
 * InputReleased for this lease or until destroy returns. Rejection retains no
 * pointer. C/Python examples are tested: Python uses PyBUF_SIMPLE and keeps the
 * exporter until PyBuffer_Release after the event. Go/JVM bindings are currently
 * unavailable: Go requires runtime.Pinner for every retained Go allocation;
 * JVM requires retained direct ByteBuffer storage. Enable those bindings only
 * after their own pinning/lifetime tests; movable managed heap storage is invalid. */
int32_t kr_lease_register(kr_producer*,const uint8_t*,uint64_t,uint64_t*);
/* Accepted prefix. Check kr_last_error for why a nonempty suffix was rejected.
 * Copy inputs remain valid/immutable throughout the call; no retention afterwards.
 * Leased spans must lie in committed native memory. Mutation stops at commit.
 * key/value_is_null distinguish NULL from present empty; hints -1 mean absent.
 * Each struct_size must exactly match its current definition. */
uint32_t kr_submitv_copy(kr_producer*,const kr_record*,uint32_t);
uint32_t kr_submitv_leased(kr_producer*,uint64_t,const kr_record*,uint32_t);
/* Initialize struct_size on every output slot. This drains events only.
 * event.token is record/lease/flush token according to kind; event.count is
 * TopicReady partition count or Closed unresolved count. Other unused fields
 * are zero. Delivery reason uses KR_REASON_*, optional values use *_present. */
uint32_t kr_poll_events(kr_producer*,kr_event*,uint32_t);
int32_t kr_flush(kr_producer*,uint64_t*);
/* Relative delivery close timeout in milliseconds. */
int32_t kr_close(kr_producer*,uint64_t timeout_ms);