rust-runtime-kafka/kafka/kr-kafka-java/src/main/java/io/krkafka/ffi/kr_kafka_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_buffer_release(kr_producer *, uint64_t)
     * }
     */
    public static MemorySegment kr_buffer_release$address() {
        return kr_buffer_release.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_buffer_release(kr_producer *, uint64_t)
     * }
     */
    public static int kr_buffer_release(MemorySegment x0, long x1) {
        var mh$ = kr_buffer_release.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_buffer_release", x0, x1);
            }
            return (int)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_lease_register {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_lease_register");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_lease_register(kr_producer *, const uint8_t *, uint64_t, uint64_t *)
     * }
     */
    public static FunctionDescriptor kr_lease_register$descriptor() {
        return kr_lease_register.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_lease_register(kr_producer *, const uint8_t *, uint64_t, uint64_t *)
     * }
     */
    public static MethodHandle kr_lease_register$handle() {
        return kr_lease_register.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_lease_register(kr_producer *, const uint8_t *, uint64_t, uint64_t *)
     * }
     */
    public static MemorySegment kr_lease_register$address() {
        return kr_lease_register.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_lease_register(kr_producer *, const uint8_t *, uint64_t, uint64_t *)
     * }
     */
    public static int kr_lease_register(MemorySegment x0, MemorySegment x1, long x2, MemorySegment x3) {
        var mh$ = kr_lease_register.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_lease_register", x0, x1, x2, x3);
            }
            return (int)mh$.invokeExact(x0, x1, x2, x3);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_submitv_copy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_submitv_copy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_copy(kr_producer *, const kr_record *, uint32_t)
     * }
     */
    public static FunctionDescriptor kr_submitv_copy$descriptor() {
        return kr_submitv_copy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_copy(kr_producer *, const kr_record *, uint32_t)
     * }
     */
    public static MethodHandle kr_submitv_copy$handle() {
        return kr_submitv_copy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_copy(kr_producer *, const kr_record *, uint32_t)
     * }
     */
    public static MemorySegment kr_submitv_copy$address() {
        return kr_submitv_copy.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t kr_submitv_copy(kr_producer *, const kr_record *, uint32_t)
     * }
     */
    public static int kr_submitv_copy(MemorySegment x0, MemorySegment x1, int x2) {
        var mh$ = kr_submitv_copy.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_submitv_copy", x0, x1, x2);
            }
            return (int)mh$.invokeExact(x0, x1, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_submitv_leased {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_submitv_leased");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_leased(kr_producer *, uint64_t, const kr_record *, uint32_t)
     * }
     */
    public static FunctionDescriptor kr_submitv_leased$descriptor() {
        return kr_submitv_leased.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_leased(kr_producer *, uint64_t, const kr_record *, uint32_t)
     * }
     */
    public static MethodHandle kr_submitv_leased$handle() {
        return kr_submitv_leased.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t kr_submitv_leased(kr_producer *, uint64_t, const kr_record *, uint32_t)
     * }
     */
    public static MemorySegment kr_submitv_leased$address() {
        return kr_submitv_leased.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t kr_submitv_leased(kr_producer *, uint64_t, const kr_record *, uint32_t)
     * }
     */
    public static int kr_submitv_leased(MemorySegment x0, long x1, MemorySegment x2, int x3) {
        var mh$ = kr_submitv_leased.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_submitv_leased", x0, x1, x2, x3);
            }
            return (int)mh$.invokeExact(x0, x1, x2, x3);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_poll_events {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_poll_events");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t kr_poll_events(kr_producer *, kr_event *, uint32_t)
     * }
     */
    public static FunctionDescriptor kr_poll_events$descriptor() {
        return kr_poll_events.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t kr_poll_events(kr_producer *, kr_event *, uint32_t)
     * }
     */
    public static MethodHandle kr_poll_events$handle() {
        return kr_poll_events.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t kr_poll_events(kr_producer *, kr_event *, uint32_t)
     * }
     */
    public static MemorySegment kr_poll_events$address() {
        return kr_poll_events.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t kr_poll_events(kr_producer *, kr_event *, uint32_t)
     * }
     */
    public static int kr_poll_events(MemorySegment x0, MemorySegment x1, int x2) {
        var mh$ = kr_poll_events.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_poll_events", x0, x1, x2);
            }
            return (int)mh$.invokeExact(x0, x1, x2);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_flush {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_flush");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_flush(kr_producer *, uint64_t *)
     * }
     */
    public static FunctionDescriptor kr_flush$descriptor() {
        return kr_flush.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_flush(kr_producer *, uint64_t *)
     * }
     */
    public static MethodHandle kr_flush$handle() {
        return kr_flush.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_flush(kr_producer *, uint64_t *)
     * }
     */
    public static MemorySegment kr_flush$address() {
        return kr_flush.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_flush(kr_producer *, uint64_t *)
     * }
     */
    public static int kr_flush(MemorySegment x0, MemorySegment x1) {
        var mh$ = kr_flush.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_flush", x0, x1);
            }
            return (int)mh$.invokeExact(x0, x1);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class kr_close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            kr_kafka_h.C_INT,
            kr_kafka_h.C_POINTER,
            kr_kafka_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("kr_close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t kr_close(kr_producer *, uint64_t timeout_ms)
     * }
     */
    public static FunctionDescriptor kr_close$descriptor() {
        return kr_close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t kr_close(kr_producer *, uint64_t timeout_ms)
     * }
     */
    public static MethodHandle kr_close$handle() {
        return kr_close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t kr_close(kr_producer *, uint64_t timeout_ms)
     * }
     */
    public static MemorySegment kr_close$address() {
        return kr_close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t kr_close(kr_producer *, uint64_t timeout_ms)
     * }
     */
    public static int kr_close(MemorySegment x0, long timeout_ms) {
        var mh$ = kr_close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("kr_close", x0, timeout_ms);
            }
            return (int)mh$.invokeExact(x0, timeout_ms);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
